// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion rendering renders an item with interactive content 1`] = `
<Accordion>
  <Provider
    allowMultipleExpanded={false}
  >
    <Stack
      data-cy="accordion"
      spacingSize="m"
      tag="div"
    >
      <div
        className="css-15twc3j"
        data-cy="accordion"
      >
        <AccordionItem
          id="customId"
        >
          <Provider
            expandedItems={Array []}
            id="customId"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitleInteractive
                appearance="danger"
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  appearance="danger"
                  data-cy="accordionItemTitle accordionItemTitle.danger"
                  isExpanded={false}
                >
                  <div
                    className="css-1nin987"
                    data-cy="accordionItemTitle accordionItemTitle.danger"
                  >
                    <ResetButton
                      aria-controls="customId-content"
                      aria-expanded={false}
                      className="css-jd8ubb"
                      data-cy="accordionItemTitle-button"
                      onClick={[Function]}
                    >
                      <button
                        aria-controls="customId-content"
                        aria-expanded={false}
                        className="css-odh0fh"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          tabIndex={-1}
                        />
                      </button>
                    </ResetButton>
                    <AccordionItemTitleInner
                      isExpanded={false}
                      isInteractive={true}
                    >
                      <span
                        className="css-1nhhn1w"
                        data-cy="accordionItemTitleInner"
                      >
                        <span
                          className="css-1321nl5"
                        >
                          <Icon
                            shape="system-triangle-right"
                            size="xs"
                          >
                            <svg
                              aria-label="system-triangle-right icon"
                              className="css-jbdp75"
                              data-cy="icon"
                              height={16}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width={16}
                            >
                              <use
                                xlinkHref="#system-triangle-right"
                              />
                            </svg>
                          </Icon>
                        </span>
                        <span
                          className="css-bleycz"
                        >
                          <h3
                            className="css-fmvpil"
                            data-cy="accordionItemTitle-heading"
                            id="customId-heading"
                          >
                            Panel 1
                          </h3>
                          <button
                            id="interaction"
                          >
                            test
                          </button>
                        </span>
                      </span>
                    </AccordionItemTitleInner>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitleInteractive>
              <AccordionItemContent>
                <div
                  aria-labelledby="customId-heading"
                  className="css-13hugf8"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="customId-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
        <AccordionItem>
          <Provider
            expandedItems={Array []}
            id="accordionItem-3"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitleInteractive
                appearance="danger"
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  appearance="danger"
                  data-cy="accordionItemTitle accordionItemTitle.danger"
                  isExpanded={false}
                >
                  <div
                    className="css-1nin987"
                    data-cy="accordionItemTitle accordionItemTitle.danger"
                  >
                    <ResetButton
                      aria-controls="accordionItem-3-content"
                      aria-expanded={false}
                      className="css-jd8ubb"
                      data-cy="accordionItemTitle-button"
                      onClick={[Function]}
                    >
                      <button
                        aria-controls="accordionItem-3-content"
                        aria-expanded={false}
                        className="css-odh0fh"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          tabIndex={-1}
                        />
                      </button>
                    </ResetButton>
                    <AccordionItemTitleInner
                      isExpanded={false}
                      isInteractive={true}
                    >
                      <span
                        className="css-1nhhn1w"
                        data-cy="accordionItemTitleInner"
                      >
                        <span
                          className="css-1321nl5"
                        >
                          <Icon
                            shape="system-triangle-right"
                            size="xs"
                          >
                            <svg
                              aria-label="system-triangle-right icon"
                              className="css-jbdp75"
                              data-cy="icon"
                              height={16}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width={16}
                            >
                              <use
                                xlinkHref="#system-triangle-right"
                              />
                            </svg>
                          </Icon>
                        </span>
                        <span
                          className="css-bleycz"
                        >
                          <h3
                            id="accordionItem-3-heading"
                          >
                            Panel 1
                          </h3>
                          <button
                            id="interaction"
                          >
                            test
                          </button>
                          <button
                            aria-controls="accordionItem-3-content"
                            aria-expanded={false}
                            id="toggle"
                            onClick={[Function]}
                          >
                            toggle
                          </button>
                        </span>
                      </span>
                    </AccordionItemTitleInner>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitleInteractive>
              <AccordionItemContent>
                <div
                  aria-labelledby="accordionItem-3-heading"
                  className="css-13hugf8"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem-3-content"
                >
                  Content 2
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
        <AccordionItem>
          <Provider
            expandedItems={Array []}
            id="accordionItem-4"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitleInteractive
                data-cy="accordionItemTitle"
                disabled={true}
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle accordionItemTitle.disabled"
                  disabled={true}
                  isExpanded={false}
                >
                  <div
                    className="css-cf9h7f"
                    data-cy="accordionItemTitle accordionItemTitle.disabled"
                  >
                    <ResetButton
                      aria-controls="accordionItem-4-content"
                      aria-expanded={false}
                      className="css-jd8ubb"
                      data-cy="accordionItemTitle-button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <button
                        aria-controls="accordionItem-4-content"
                        aria-expanded={false}
                        className="css-1tjctub"
                        data-cy="accordionItemTitle-button"
                        disabled={true}
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          tabIndex={-1}
                        />
                      </button>
                    </ResetButton>
                    <AccordionItemTitleInner
                      isExpanded={false}
                      isInteractive={true}
                    >
                      <span
                        className="css-1nhhn1w"
                        data-cy="accordionItemTitleInner"
                      >
                        <span
                          className="css-1321nl5"
                        >
                          <Icon
                            shape="system-triangle-right"
                            size="xs"
                          >
                            <svg
                              aria-label="system-triangle-right icon"
                              className="css-jbdp75"
                              data-cy="icon"
                              height={16}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width={16}
                            >
                              <use
                                xlinkHref="#system-triangle-right"
                              />
                            </svg>
                          </Icon>
                        </span>
                        <span
                          className="css-bleycz"
                        >
                          <h3
                            className="css-fmvpil"
                            data-cy="accordionItemTitle-heading"
                            id="accordionItem-4-heading"
                          >
                            Panel 1
                          </h3>
                          <button
                            id="interaction"
                          >
                            test
                          </button>
                        </span>
                      </span>
                    </AccordionItemTitleInner>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitleInteractive>
              <AccordionItemContent>
                <div
                  aria-labelledby="accordionItem-4-heading"
                  className="css-13hugf8"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem-4-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
      </div>
    </Stack>
  </Provider>
</Accordion>
`;

exports[`Accordion rendering renders with expanded items 1`] = `
<Accordion
  initialExpandedItems={
    Array [
      "panel1",
      "panel2",
      "panel3",
    ]
  }
>
  <Provider
    allowMultipleExpanded={false}
    initialExpandedItems={
      Array [
        "panel1",
        "panel2",
        "panel3",
      ]
    }
  >
    <Stack
      data-cy="accordion"
      spacingSize="m"
      tag="div"
    >
      <div
        className="css-15twc3j"
        data-cy="accordion"
      >
        <AccordionItem
          id="panel1"
        >
          <Provider
            expandedItems={
              Array [
                "panel1",
                "panel2",
                "panel3",
              ]
            }
            id="panel1"
          >
            <div
              data-cy="accordionItem accordionItem.expanded"
            >
              <AccordionItemTitle>
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={true}
                >
                  <div
                    className="css-duvnlo"
                    data-cy="accordionItemTitle"
                  >
                    <h3
                      className="css-fmvpil"
                      data-cy="accordionItemTitle-heading"
                      id="panel1-heading"
                    >
                      <ResetButton
                        aria-controls="panel1-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="panel1-content"
                          aria-expanded="false"
                          className="css-1gh59q1"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={true}
                            >
                              <span
                                className="css-13atth2"
                                data-cy="accordionItemTitleInner"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-down"
                                    size="xs"
                                  >
                                    <svg
                                      aria-label="system-triangle-down icon"
                                      className="css-jbdp75"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-down"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 1
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent>
                <div
                  aria-labelledby="panel1-heading"
                  className="css-72kisv"
                  data-cy="accordionItemContent"
                  hidden={false}
                  id="panel1-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
        <AccordionItem
          id="panel2"
        >
          <Provider
            expandedItems={
              Array [
                "panel1",
                "panel2",
                "panel3",
              ]
            }
            id="panel2"
          >
            <div
              data-cy="accordionItem accordionItem.expanded"
            >
              <AccordionItemTitle>
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={true}
                >
                  <div
                    className="css-duvnlo"
                    data-cy="accordionItemTitle"
                  >
                    <h3
                      className="css-fmvpil"
                      data-cy="accordionItemTitle-heading"
                      id="panel2-heading"
                    >
                      <ResetButton
                        aria-controls="panel2-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="panel2-content"
                          aria-expanded="false"
                          className="css-1gh59q1"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={true}
                            >
                              <span
                                className="css-13atth2"
                                data-cy="accordionItemTitleInner"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-down"
                                    size="xs"
                                  >
                                    <svg
                                      aria-label="system-triangle-down icon"
                                      className="css-jbdp75"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-down"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 2
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent>
                <div
                  aria-labelledby="panel2-heading"
                  className="css-72kisv"
                  data-cy="accordionItemContent"
                  hidden={false}
                  id="panel2-content"
                >
                  Content 2
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
        <AccordionItem
          id="panel3"
        >
          <Provider
            expandedItems={
              Array [
                "panel1",
                "panel2",
                "panel3",
              ]
            }
            id="panel3"
          >
            <div
              data-cy="accordionItem accordionItem.expanded"
            >
              <AccordionItemTitle>
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={true}
                >
                  <div
                    className="css-duvnlo"
                    data-cy="accordionItemTitle"
                  >
                    <h3
                      className="css-fmvpil"
                      data-cy="accordionItemTitle-heading"
                      id="panel3-heading"
                    >
                      <ResetButton
                        aria-controls="panel3-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="panel3-content"
                          aria-expanded="false"
                          className="css-1gh59q1"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={true}
                            >
                              <span
                                className="css-13atth2"
                                data-cy="accordionItemTitleInner"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-down"
                                    size="xs"
                                  >
                                    <svg
                                      aria-label="system-triangle-down icon"
                                      className="css-jbdp75"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-down"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 3
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent>
                <div
                  aria-labelledby="panel3-heading"
                  className="css-72kisv"
                  data-cy="accordionItemContent"
                  hidden={false}
                  id="panel3-content"
                >
                  Content 3
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
      </div>
    </Stack>
  </Provider>
</Accordion>
`;

exports[`Accordion rendering renders with no expanded items 1`] = `
<Accordion>
  <Provider
    allowMultipleExpanded={false}
  >
    <Stack
      data-cy="accordion"
      spacingSize="m"
      tag="div"
    >
      <div
        className="css-15twc3j"
        data-cy="accordion"
      >
        <AccordionItem
          id="customId"
        >
          <Provider
            expandedItems={Array []}
            id="customId"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitle
                appearance="danger"
              >
                <AccordionItemTitleOuter
                  appearance="danger"
                  data-cy="accordionItemTitle accordionItemTitle.danger"
                  isExpanded={false}
                >
                  <div
                    className="css-1nin987"
                    data-cy="accordionItemTitle accordionItemTitle.danger"
                  >
                    <h3
                      className="css-fmvpil"
                      data-cy="accordionItemTitle-heading"
                      id="customId-heading"
                    >
                      <ResetButton
                        aria-controls="customId-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="customId-content"
                          aria-expanded="false"
                          className="css-1gh59q1"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={false}
                            >
                              <span
                                className="css-13atth2"
                                data-cy="accordionItemTitleInner"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-right"
                                    size="xs"
                                  >
                                    <svg
                                      aria-label="system-triangle-right icon"
                                      className="css-jbdp75"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-right"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 1
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent>
                <div
                  aria-labelledby="customId-heading"
                  className="css-13hugf8"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="customId-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
        <AccordionItem>
          <Provider
            expandedItems={Array []}
            id="accordionItem-1"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitle
                disabled={true}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle accordionItemTitle.disabled"
                  disabled={true}
                  isExpanded={false}
                >
                  <div
                    className="css-cf9h7f"
                    data-cy="accordionItemTitle accordionItemTitle.disabled"
                  >
                    <h3
                      className="css-fmvpil"
                      data-cy="accordionItemTitle-heading"
                      id="accordionItem-1-heading"
                    >
                      <ResetButton
                        aria-controls="accordionItem-1-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        disabled={true}
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="accordionItem-1-content"
                          aria-expanded="false"
                          className="css-1l66126"
                          data-cy="accordionItemTitle-button"
                          disabled={true}
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={false}
                            >
                              <span
                                className="css-13atth2"
                                data-cy="accordionItemTitleInner"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-right"
                                    size="xs"
                                  >
                                    <svg
                                      aria-label="system-triangle-right icon"
                                      className="css-jbdp75"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-right"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 2
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent>
                <div
                  aria-labelledby="accordionItem-1-heading"
                  className="css-13hugf8"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem-1-content"
                >
                  Content 2
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
        <AccordionItem>
          <Provider
            expandedItems={Array []}
            id="accordionItem-2"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitle
                headingLevel={2}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={false}
                >
                  <div
                    className="css-1uett59"
                    data-cy="accordionItemTitle"
                  >
                    <h2
                      className="css-fmvpil"
                      data-cy="accordionItemTitle-heading"
                      id="accordionItem-2-heading"
                    >
                      <ResetButton
                        aria-controls="accordionItem-2-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="accordionItem-2-content"
                          aria-expanded="false"
                          className="css-1gh59q1"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={false}
                            >
                              <span
                                className="css-13atth2"
                                data-cy="accordionItemTitleInner"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-right"
                                    size="xs"
                                  >
                                    <svg
                                      aria-label="system-triangle-right icon"
                                      className="css-jbdp75"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-right"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 3
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h2>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent>
                <div
                  aria-labelledby="accordionItem-2-heading"
                  className="css-13hugf8"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem-2-content"
                >
                  Content 3
                </div>
              </AccordionItemContent>
            </div>
          </Provider>
        </AccordionItem>
      </div>
    </Stack>
  </Provider>
</Accordion>
`;
